and this project adheres to http://semver.org/[Semantic Versioning].

=== [2.0.0] - Unreleased
==== Added
* USB device information is now returned in calls to `available_ports()`
* Serial port enumeration is now supported on Mac
* Serial port enumeration now attempts to return the interface used for the
  port (USB, PCI, Bluetooth, Unknown).

==== Changed
* Software license has changed from LGPLv3+ to MPL-2.0. This makes it
  possible to use this library in any Rust project if it's unmodified.
* Mac is now a Tier 2 supported platform
* Removed `BaudRate::from_speed(usize)` and `BaudRate::speed -> usize` in favor
  of the `From<u32>` and `Into<u32>` traits.

=== [1.0.1] - 2017-02-20
==== Fixed
* `read()` now properly blocks for at least one character
* Compilation now works on Mac

=== [1.0.0] - 2017-02-13
==== Changed
* Various documentation/README updates
* Minor formatting fixes (from rustfmt)

==== Fixed
* Platform-specific examples are now only built on appropriate platforms

=== [0.9.0] - 2017-02-09
==== Added
* `impl Debug` for `COMPort`
* `exclusive()` and `set_exclusive()` for `TTYPort`
* `port_name()` for `SerialPort`
* `impl FromRawFd` and `impl IntoRawFd` for `TTYPort`
* `pair()` for `TTYPort`

=== [0.3.0] - 2017-01-28
==== Added
* `open_with_settings()` to support initializing the port with custom settings
* `SerialPortSettings` is now publically usable being exported in the prelude,
  having all public and commented fields, and a `Default` impl.

==== Changed
* `TTYPort/COMPort::open()` now take a `SerialPortSettings` argument and return
  concrete types
* `serialport::open()` now initializes the port to reasonable defaults
* Removed all instances of `try!()` for `?`
* `SerialPort::set_all()` now borrows `SerialPortSettings`

=== [0.2.4] - 2017-01-26
==== Added
* Report an Unimplemented error for unsupported unix targets

==== Changed
* Minor changes suggested by Clippy
* Reworked Cargo.toml to more easily support additional targets

==== Fixed